# griffin

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  pool.c  pool.h  string.h
examples/: basic.c
src/: fosa.c  fosa.h  fosa_map.h  fosa_pool.c  fosa_pool.h  fosa_string.h  gn_conn.h  gn_endpoint.h  gn_http.c  gn_http.h  gn_map.h  gn_pool.c  gn_pool.h  gn_router.c  gn_router.h  gn_string.h  griffin.c  griffin.h
tests/: main.c  map_test.c  router_test.c  url_encode_test.c  utf8_test.c
